# message_server

./: Cargo.toml  README.md  application.yml  care.txt  dump.txt  plan.txt
src/: lib.rs  main.rs
src/config/: config.rs  context.rs  initializer.rs  logger.rs  mod.rs  redis_client.rs  scheduler.rs  user_context.rs
src/controller/: message_controller.rs  mod.rs  user_controller.rs
src/dao/: copy_writing_mapper.rs  mod.rs  user_mapper.html  user_mapper.rs  user_notice_setting_mapper.rs
src/domain/: mod.rs
src/domain/dto/: mod.rs  page.rs  user.rs  weather_info.rs  wechat_template_field_message.rs  wechat_template_message.rs
src/domain/entity/: mod.rs  primary_database_tables.rs
src/domain/vo/: mod.rs  user.rs
src/middleware/: actix_interceptor.rs  auth.rs  mod.rs
src/service/: message_service.rs  mod.rs  user_service.rs
src/util/: amap_util.rs  constant.rs  date_time.rs  error.rs  mail_api.rs  mod.rs  page.rs  password_encoder_util.rs  result.rs  we_chat_api.rs
